--- a/public/static/main.css
+++ b/public/static/main.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 .center-login-form {
-    width: 450px;
+    min-width: 450px;
     height: fit-content;
     border: 1px solid #c2c4c2;
     position: absolute;
@@ -22,12 +22,12 @@ html, body {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 40px;
-    padding: 40px 0;
+    padding: 40px 20px;
     background: white;
     box-shadow: 0 1px 2px #00000060;
     min-height: 160px;
 }
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
     border-radius: 6px;
     border: 1px solid #c2c4c2;
     min-height: 25px;
@@ -48,8 +48,13 @@ input[type=button]:hover, input[type=submit]:hover {
     background: linear-gradient(0deg, #ffffff 0%, #fbfbfb 50%, #ffffff 100%);
 }
 input[type=button]:active, input[type=submit]:active {
-background: linear-gradient(0deg, #fbfbfb 0%, #ffffff 100%);
+    background: linear-gradient(0deg, #fbfbfb 0%, #ffffff 100%);
 }
+input[type=button]:disabled, input[type=submit]:disabled {
+    background: linear-gradient(0deg, #ebebeb 0%, #eeeeee 100%);
+    border: 1px solid #909090;
+}
+
 input[type=checkbox] {
     width: 14px;height: 14px;
     border: 1px solid #c2c4c2;
@@ -99,6 +104,7 @@ img {
     border-left: 0;
     border-radius: 0 16px 16px 0;
     box-shadow: 1px 1px 2px #00000040;
+    display: none !important;
 }
 .mobile-qr img {
     image-rendering: pixelated
