Both login and signup functionality working

--- a/public/static/css/uk.css
+++ b/public/static/css/uk.css
@@ -1,5 +1,5 @@
 html, body {
-    background: url(/static/soup.jpg);
+    background: url(/static/field.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
