--- a/public/static/main.css
+++ b/public/static/main.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 .center-login-form {
-    min-width: 450px;
+    min-width: fit-content;
     height: fit-content;
     border: 1px solid #c2c4c2;
     position: absolute;
@@ -22,7 +22,7 @@ html, body {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 40px;
-    padding: 40px 20px;
+    padding: 40px 80px;
     background: white;
     box-shadow: 0 1px 2px #00000060;
     min-height: 160px;
