--- a/public/static/main.css
+++ b/public/static/main.css
@@ -152,3 +152,10 @@ a {
     color: #365263;
     text-decoration: none;
 }
+hr {
+    border:0;
+    border-top: 1px solid #eeefee;
+    border-bottom: 1px solid #c2c4c2;
+    max-height: 1px;
+    padding: 0;
+}
