--- a/public/static/main.css
+++ b/public/static/main.css
@@ -27,7 +27,7 @@ html, body {
     box-shadow: 0 1px 2px #00000060;
     min-height: 160px;
 }
-input[type=text], input[type=password], input[type=email] {
+input[type=text], input[type=password], input[type=email], select {
     border-radius: 6px;
     border: 1px solid #c2c4c2;
     min-height: 25px;
